--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 
         <div style="text-align:center;margin:30px 0;">
             <h3>Scan QR untuk akses website:</h3>
-            <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://username.github.io/birthday/" alt="QR Code" />
-            <p>https://username.github.io/birthday/</p>
+            <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://sitimunawaroh6.github.io/birthday/" alt="QR Code" />
+            <p>https://sitimunawaroh6.github.io/birthday/</p>
         </div>
     </div>
 
