--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
         <audio id="birthday-audio" src="images/happy-birthday-155461.mp3" autoplay></audio>
         <button id="play-audio" style="position:fixed;top:20px;right:20px;z-index:999;">Play Music 🎵</button>
 
-        <div style="text-align:center;margin:30px 0;">
+        <!--<div style="text-align:center;margin:30px 0;">
             <h3>Scan QR untuk akses website:</h3>
             <img src="https://api.qrserver.com/v1/create-qr-code/?size=200x200&data=https://sitimunawaroh6.github.io/birthday/" alt="QR Code" />
             <p>https://sitimunawaroh6.github.io/birthday/</p>
-        </div>
+        </div>-->
     </div>
 
 </body>
